Sculpting with Original Normal rips edges #70387

Closed
opened 2019-09-30 11:29:02 +02:00 by Julien Kaspar · 9 comments
Member

System Information
Operating system: Linux-4.15.0-64-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-30 08:51, hash: 64c8e9a219

Short description of error
When using the new brush option "Original Normal" the sculpt plane orientation is fixed. It also occasionally rips the edges on the sculpt mesh.
This does not translate to the actual mesh in Edit Mode or the other Modes but it does cause clearly visible stepping in the brush stroke after exiting Sculpt Mode.

2019-09-30 11-18-28.mp4

Exact steps for others to reproduce the error

  • Create a UV sphere or cube
  • Subdivide it a few times to the mesh is relatively dense. (More likely to rip edges)
  • Enable "Original Normal" on any brush that is not anchored and works with this brush option (e.g. Draw, Clay, Scrape)
  • Place a stroke across a large part of the surface with high strength.
**System Information** Operating system: Linux-4.15.0-64-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.40 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-30 08:51, hash: `64c8e9a219` **Short description of error** When using the new brush option "Original Normal" the sculpt plane orientation is fixed. It also occasionally rips the edges on the sculpt mesh. This does not translate to the actual mesh in Edit Mode or the other Modes but it does cause clearly visible stepping in the brush stroke after exiting Sculpt Mode. [2019-09-30 11-18-28.mp4](https://archive.blender.org/developer/F7781537/2019-09-30_11-18-28.mp4) **Exact steps for others to reproduce the error** - Create a UV sphere or cube - Subdivide it a few times to the mesh is relatively dense. (More likely to rip edges) - Enable "Original Normal" on any brush that is not anchored and works with this brush option (e.g. Draw, Clay, Scrape) - Place a stroke across a large part of the surface with high strength.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Added subscriber: @PabloDobarro

Added subscriber: @PabloDobarro
Pablo Dobarro was assigned by Brecht Van Lommel 2019-10-02 23:35:41 +02:00

This issue was referenced by 29707e3437

This issue was referenced by 29707e3437671c5e962646c95b1f36e12e93eb75
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

@PabloDobarro
I still see this issue in some brushes. I was experimenting with the Scrape brush and it seems to work fine when also having "Accumulate" enabled. With just "Original Normal" it still rips the edges though.

2019-10-07 17-39-58.mp4

@PabloDobarro I still see this issue in some brushes. I was experimenting with the Scrape brush and it seems to work fine when also having "Accumulate" enabled. With just "Original Normal" it still rips the edges though. [2019-10-07 17-39-58.mp4](https://archive.blender.org/developer/F7794824/2019-10-07_17-39-58.mp4)
Member

I can't reproduce that with scrape. Can you check if this fixes the issue? D6011

I can't reproduce that with scrape. Can you check if this fixes the issue? [D6011](https://archive.blender.org/developer/D6011)
Author
Member

@PabloDobarro It still happens for me even with the patch. Other people at the studio can also reproduce it. Make sure the strength is set pretty high and that the stroke is as long as possible. It's more likely to happen that way.

@PabloDobarro It still happens for me even with the patch. Other people at the studio can also reproduce it. Make sure the strength is set pretty high and that the stroke is as long as possible. It's more likely to happen that way.

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich

i got this result imagen.png
with this file scrape test.blend
using 40a55be82c

win 7 x64 nvidia 1070 drv: 430.86

i got this result ![imagen.png](https://archive.blender.org/developer/F7798896/imagen.png) with this file [scrape test.blend](https://archive.blender.org/developer/F7798898/scrape_test.blend) using 40a55be82cf5 win 7 x64 nvidia 1070 drv: 430.86
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70387
No description provided.