Fix T70387: Sculpting with Original Normal rips edges

Reviewed By: brecht

Maniphest Tasks: T70387

Differential Revision: https://developer.blender.org/D5982